@@ -15,8 +15,8 @@ import com.gpse.sesam.domain.credential.validation.*;
 import com.gpse.sesam.domain.location.Coordinate;
 import com.gpse.sesam.domain.location.Location;
 import com.gpse.sesam.domain.location.LocationService;
-import com.gpse.sesam.domain.location.RoomGroupService;
-import com.gpse.sesam.domain.location.RoomGroups;
+import com.gpse.sesam.domain.location.roomgroup.RoomGroupService;
+import com.gpse.sesam.domain.location.roomgroup.RoomGroups;
 import com.gpse.sesam.domain.location.building.Building;
 import com.gpse.sesam.domain.location.door.Door;
 import com.gpse.sesam.domain.location.floor.Floor;
@@ -335,12 +335,6 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		issuers.add(issuer1);
 		issuers.add(issuer2);
 
-		// Safety-Credential
-		final InternalCredential safety = new InternalCredential("Sicherheitsbelehrung-Uni", "$U-MEMBER",
-				"university", form, checklist);
-		safety.addIssuer(issuer1);
-		safety.addIssuer(issuer2);
-
 		final List<ChecklistEntry> checklist3 = checklist();
 
 		final List<FormEntry> form3 = form();  //Form
@@ -350,7 +344,7 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		safety2.addIssuer(issuer2);
 
 
-		return Arrays.asList(safety, safety2);
+		return List.of(safety2);
 	}
 
 	private List<Category> createCredentialCategories() {
